# senhaunica-socialite-python

./: .gitignore  README.md  pyproject.toml  pytest.ini
.agent/rules/: project-rules.md
example_project/example_project/: settings.py  urls.py  views.py
example_project/example_project/templates/: home.html
senhaunica_socialite/: backends.py  client.py  urls.py  views.py
tests/: test_client.py
